"""Added Location model

Revision ID: 471f3b428f0f
Revises: 4e0a17498c11
Create Date: 2024-04-22 11:29:41.451471

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '471f3b428f0f'
down_revision = '4e0a17498c11'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('location',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('department', sa.String(length=50), nullable=False),
    sa.Column('commune', sa.String(length=50), nullable=False),
    sa.Column('precision', sa.Text(), nullable=False),
    sa.Column('affaire_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['affaire_id'], ['affaire.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('location')
    # ### end Alembic commands ###
