"""Initial migration

Revision ID: 7246633b5ee2
Revises: 
Create Date: 2024-03-04 15:18:07.940874

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '7246633b5ee2'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('departements',
    sa.Column('DEP_CODE', sa.String(), nullable=False),
    sa.Column('DEP_NOM', sa.String(), nullable=False),
    sa.PrimaryKeyConstraint('DEP_CODE')
    )
    op.create_table('users',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False),
    sa.Column('email', sa.String(length=100), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('communes',
    sa.Column('COM_CODE', sa.String(), nullable=False),
    sa.Column('COM_NOM', sa.String(), nullable=False),
    sa.Column('DEP_CODE', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['DEP_CODE'], ['departements.DEP_CODE'], ),
    sa.PrimaryKeyConstraint('COM_CODE')
    )
    op.create_table('affaires',
    sa.Column('ID', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('Nom', sa.String(), nullable=False),
    sa.Column('DEP_CODE', sa.String(), nullable=True),
    sa.Column('COM_CODE', sa.String(), nullable=True),
    sa.Column('Precision', sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(['COM_CODE'], ['communes.COM_CODE'], ),
    sa.ForeignKeyConstraint(['DEP_CODE'], ['departements.DEP_CODE'], ),
    sa.PrimaryKeyConstraint('ID')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('affaires')
    op.drop_table('communes')
    op.drop_table('users')
    op.drop_table('departements')
    # ### end Alembic commands ###
