@startuml

package "Database Schema" <<database>> {

    entity "User" as user {
        +id : Integer
        username : String
    }
    note right of user
       <b>Creation order</b>
       <size:18><b><color:red>1</color></b></size>
    end note

    entity "Affaire" as affaire {
        +id : Integer
        nom : String
        user_id : Integer
    }
    note right of affaire
       <b>Creation order</b>
       <size:18><b><color:red>2</color></b></size>
    end note

    entity "Location" as location {
        +id : Integer
        department : String
        commune : String
        precision : Text
        affaire_id : Integer
    }
    note right of location
       <b>Creation order</b>
       <size:18><b><color:red>3</color></b></size>
    end note

    entity "Departement" as departements {
        DEP_CODE : String
        DEP_NOM  : String
    }
    note right of departements
       <b>Creation order</b>
       <size:18><b><color:red>4</color></b></size>
    end note

    entity "Commune" as communes {
        +COM_CODE : String
        COM_NOM : String
        DEP_CODE : String
    }
    note right of communes
       <b>Creation order</b>
       <size:18><b><color:red>5</color></b></size>
    end note

}

user -- affaire : "user_id"
affaire -- location : "affaire_id"
location ..> departements : "department"
location ..> communes : "commune"

@enduml
